--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Daniel Ayala</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>My name is Daniel and I have always been interested in tech and application development</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p> I come from a small town in Southern California</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love being active so things like running, skating, or playing tennis is the usual</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would be to have no concrete job at all and live through passive income creating whatever I want</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in a small town in Southern California in the Riverside area</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have always found myself to be someone interested in puzzles and all things logistical as well as having a fascination for creation. I also figured with my love for all things tech programming was the choice.</p>
     </section>
 
     <footer id="footer">
