--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>My name is Daniel and I have always been interested in tech and application development</p>
+      <p>My name is Daniel I am 18 years old and I have always been interested in tech and application development.</p>
       <h1>Where I'm From</h1>
-      <p> I come from a small town in Southern California</p>
+      <p> I come from a desert town in Southern California.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I love being active so things like running, skating, or playing tennis is the usual</p>
+      <p>I love being active so things like running, exercising, skating, or playing tennis is the usual.</p>
       <h1>What's your dream job?</h1>
-      <p>My dream job would be to have no concrete job at all and live through passive income creating whatever I want</p>
+      <p>My dream job would be to have no concrete job at all and live through passive income creating whatever I want.</p>
       <h1>Where do you live?</h1>
-      <p>I currently live in a small town in Southern California in the Riverside area</p>
+      <p>I currently live in a small town in Southern California in the Riverside area.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I have always found myself to be someone interested in puzzles and all things logistical as well as having a fascination for creation. I also figured with my love for all things tech programming was the choice.</p>
+      <p>I have always found myself to be someone interested in puzzles and all things logistical as well as having a fascination for creation. I also figured with my love for all things, tech programming was the choice.</p>
     </section>
 
     <footer id="footer">
